# camera_sched

./: CMakeLists.txt  README.md  package.xml
config/: schedule.yaml
launch/: params.launch
src/: camera.cpp  scheduler.cpp
srv/: Trigger.srv
